# contrlos

./: .gitignore  CMakeLists.txt  copy_to_test_controls.ps1
TestControls/: CMakeLists.txt  maindialog.cpp  maindialog.h  maindialog.ui  test_controls.qrc
TestItemData/untitled3/: main.cpp  untitled3.pro
TestSql/: CMakeLists.txt  main.cpp
TestSql/include/: sql_query.hpp
TestSql/src/: sql_query.cpp
arhive/tree_model/: CMakeLists.txt  tree_model_global.h  treeitem.cpp  treeitem.h  treeitemmodel.cpp  treeitemmodel.h
arhive/tree_model/iface/: iface.hpp
arhive/tree_model/ui/: rowdialog.cpp  rowdialog.ui  selectgroupdialog.cpp  selectitemdialog.ui  (+5 more)
controls/: CMakeLists.txt  controls.cpp  controls.h  controls_global.h
controls/include/: araydialog.h  arraydialog.h  header_item.h  iconf.hpp  itable.hpp  itabledatabasemodel.h  itree.hpp  pairmodel.h  selectitemdialog.h  tableconf.h  tableitem.h  tableitemdelegate.h  tablelistwidget.h  tablemodel.h  tablerowdialog.h  tabletoolbar.h  tablewidget.h  texteditdialog.h  treeconf.h  treeitem.h  treeitemcheckbox.h  treeitemcombobox.h  treeitemdelegate.h  treeitemipaddress.h  treeitemnumber.h  treeitemswidget.h  treeitemtextedit.h  treeitemtextline.h  treeitemvariant.h  treeitemwidget.h  treemodel.h  treesortmodel.h  treewidget.h
controls/res/: controls_resource.qrc
controls/src/: araydialog.cpp  arraydialog.cpp  header_item.cpp  itabledatabasemodel.cpp  pairmodel.cpp  selectitemdialog.cpp  tableconf.cpp  tableitem.cpp  tableitemdelegate.cpp  tablelistwidget.cpp  tablemodel.cpp  tablerowdialog.cpp  tabletoolbar.cpp  tablewidget.cpp  texteditdialog.cpp  treeconf.cpp  treeitem.cpp  treeitemcheckbox.cpp  treeitemcombobox.cpp  treeitemdelegate.cpp  treeitemipaddress.cpp  treeitemnumber.cpp  treeitemswidget.cpp  treeitemtextedit.cpp  treeitemtextline.cpp  treeitemvariant.cpp  treeitemwidget.cpp  treemodel.cpp  treesortmodel.cpp  treewidget.cpp
controls/ui/: araydialog.ui  tablelistwidget.ui  tablerowdialog.ui  tabletoolbar.ui  texteditdialog.ui  treeitemswidget.ui
global/: fs.hpp  global.hpp  profile_conf.hpp  server_conf.hpp  variant_p.hpp
global/base64utils/: base64.cpp
global/certuser/: certuser.cpp  certuser.h
global/cl/: command_line.hpp
global/crypt/: cryptcertificate.cpp  cryptcertificate.h  cryptcontainer.cpp  cryptcontainer.h  cryptography.hpp
global/fs/: network.cpp  network.hpp  standard_paths.hpp
global/sh/: commandline.cpp  commandline.h  commandlineparser.cpp  commandlineparser.h
global/sql/: arcirk_metadata.hpp  query_builder.hpp  soci_conversion.hpp  verify_database.hpp
global/variant/: item_data.cpp  item_data.h  item_data_std.cpp  item_data_std.h
global/websocket/: websocket.pri  websocket.pro  websocketclient.cpp  websocketclient.h
plugins/TestPlugin/: CMakeLists.txt  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  test_plugin.qrc
plugins/bankstatementsplugun/: CMakeLists.txt  plugin_res.qrc
plugins/bankstatementsplugun/include/: bankstatementsplugun.h  pluginpropertydialog.h
plugins/bankstatementsplugun/res/: org_from_pay.bsl
plugins/bankstatementsplugun/src/: bankstatementsplugun.cpp  pluginpropertydialog.cpp
plugins/bankstatementsplugun/ui/: pluginpropertydialog.ui
plugins/include/: iplugin.hpp
profile_manager/: CMakeLists.txt  main.cpp  profiles_manager.qrc  profilesmanagerdialog.cpp  profilesmanagerdialog.h  profilesmanagerdialog.ui
profile_manager/include/: certspage.h  mstscitemdialog.h  mstscpage.h  profilespage.h  setimagedialog.h
profile_manager/include/sql/: datautils.h
profile_manager/singleapplication/: CMakeLists.txt
profile_manager/src/: certspage.cpp  mstscitemdialog.cpp  mstscpage.cpp  profilespage.cpp  setimagedialog.cpp
profile_manager/src/sql/: datautils.cpp
profile_manager/ui/: certspage.ui  mstscitemdialog.ui  mstscpage.ui  profilespage.ui  setimagedialog.ui
query_builder/: CMakeLists.txt  main.cpp
query_builder/include/: maindialog.h  querybuilderadditionallywidget.h  querybuilderfieldexdialog.h  querybuilderforeginkeydialog.h  querybuilderforeignkeydialog.h
query_builder/include/sql/: metadata.hpp  query_builder.hpp
query_builder/src/: maindialog.cpp  querybuilderadditionallywidget.cpp  querybuilderfieldexdialog.cpp  querybuilderforeginkeydialog.cpp  querybuilderforeignkeydialog.cpp
query_builder/ui/: querybuilderadditionallywidget.ui  querybuilderfieldexdialog.ui  querybuilderforeginkeydialog.ui  querybuilderforeignkeydialog.ui
server/: CMakeLists.txt  main.cpp
server/archive/: CMakeLists.txt
server/http/: branding.css
server/include/: datautils.h
server/qt/project/wssrv/: CMakeLists.txt  index_template.html  main.cpp  wssrv.qrc
server/qt/project/wssrv/http/: index.html
server/qt/project/wssrv/include/: beast.hpp  directory_structure_check.hpp  http.hpp  http_session.hpp  listener.hpp  net.hpp  server_conf.hpp  server_conf_n.hpp  shared_state.hpp  websocket_session.hpp
server/qt/project/wssrv/include/common/: root_certificates.hpp  server_certificate.hpp
server/qt/project/wssrv/include/sql/: datautils.h
server/qt/project/wssrv/src/: shared_state.cpp
server/qt/project/wssrv/src/sql/: datautils.cpp
server/src/: datautils.cpp
server_manager/qt_project/server_manager/: CMakeLists.txt  ba_resurses.qrc  main.cpp  maindialog.cpp
server_manager/qt_project/server_manager/include/: dialogservers.h  dialogseversettings.h  mainwindow.h  manager_conf.hpp  serverconfig.h
server_manager/qt_project/server_manager/include/sql/: datautils.h
server_manager/qt_project/server_manager/src/: dialogservers.cpp  dialogseversettings.cpp  maindialog.cpp  mainwindow.cpp  serverconfig.cpp
server_manager/qt_project/server_manager/src/sql/: datautils.cpp
server_manager/qt_project/server_manager/ui/: dialogservers.ui  dialogseversettings.ui  mainwindow.ui  serverconfig.ui
tree_model/: CMakeLists.txt  treeconf.cpp  treeconf.h
tree_model/sort/: treesortmodel.cpp  treesortmodel.h
tree_model/ui/: rowdialog.h  selectgroupdialog.h  selectitemdialog.cpp  selectitemdialog.h  treeitemdelegate.h  treetoolbar.ui  treeviewwidget.h
(+14 files in other folders)
